# gen-ai-interior-designer

./: .gitignore  Backend성공_Frontend배포.md  COMPLETION_SUMMARY.md  DEPLOYMENT_SUCCESS.md  FEATURE_COMPLETE.md  FINAL_DEPLOY_GUIDE.md  IMAGE_UPLOAD_GUIDE.md  MCP_INTEGRATION_GUIDE.md  PROJECT_README.md  RENDER_AUTO_SETUP.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOY_LINKS.md  RENDER_INDIVIDUAL_DEPLOY.md  RENDER_QUICK_GUIDE.md  RENDER_무료배포_가이드.md  RENDER_실제화면_배포가이드.md  RENDER_올바른_배포방법.md  SETUP_GUIDE.md  VERCEL_DEPLOY_GUIDE.md  YOUTUBE_API_GUIDE.md  deploy_render.py  deploy_render_auto.py  render.yaml  vercel.json  간단요약.md  그다음단계.md  다음단계.md  로그찾는방법.md  배포실패_해결방법.md  배포완료.md  빠른배포_체크리스트.md  사용방법.md  처음부터_다시_배포.md  현재화면_입력값.md
.claude/: config.json
backend/: README.md  main.py  pyproject.toml
backend/routers/: projects.py  recommendations.py  tryon.py
backend/utils/: mcp_openai.py  openai_enhancer.py  supabase_client.py
database/migrations/: 001_create_schema.sql
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: DesignTips.jsx  ImageUpload.jsx  Navigation.jsx  ProjectCard.jsx  YouTubeRecommendations.jsx
frontend/src/locales/: translations.js
frontend/src/pages/: Home.jsx  MyProjects.jsx
